# buckley24drought

./: CITATION.cff  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: linting.yml  testing.yml
figures/: generate_corr_figures.py  generate_sgi_figures.py  generate_spei_figures.py  generate_spi_figures.py
figures/corr/cross/: bv_corr_spei.csv  bv_corr_spi.csv  gv_corr_spei.csv  gv_corr_spi.csv
index_data/: generate_sgi_data.py  generate_spei_data.py  generate_spi_data.py
index_data/sgi/: sgi_123132.csv  sgi_126793.csv  sgi_129491.csv  sgi_129952.csv  sgi_130860.csv  sgi_132260.csv  sgi_133162.csv  sgi_133165.csv  sgi_133167.csv  sgi_133172.csv  sgi_133174.csv  sgi_133176.csv  sgi_135680.csv  sgi_135689.csv  sgi_135720.csv  sgi_135722.csv  sgi_135734.csv  sgi_135735.csv  sgi_136050.csv  sgi_136486.csv  sgi_136964.csv  sgi_136969.csv  sgi_136970.csv  sgi_139989.csv  sgi_140366.csv  sgi_148531.csv  sgi_21567.csv  sgi_32.csv  sgi_50808.csv  sgi_5418.csv  sgi_55463.csv  sgi_56528.csv  sgi_57128.csv  sgi_57525.csv  sgi_58096.csv  sgi_60137.csv  sgi_820.csv  sgi_824.csv  sgi_91230.csv  sgi_91244.csv  (+5 more)
index_data/spei/: spei_1.csv  spei_10.csv  spei_11.csv  spei_12.csv  spei_13.csv  spei_14.csv  spei_15.csv  spei_16.csv  spei_17.csv  spei_18.csv  spei_19.csv  spei_2.csv  spei_20.csv  spei_21.csv  spei_22.csv  spei_23.csv  spei_24.csv  spei_25.csv  spei_26.csv  spei_27.csv  spei_28.csv  spei_29.csv  spei_3.csv  spei_30.csv  spei_31.csv  spei_32.csv  spei_33.csv  spei_34.csv  spei_35.csv  spei_36.csv  spei_37.csv  spei_38.csv  spei_39.csv  spei_4.csv  spei_40.csv  spei_41.csv  spei_42.csv  spei_43.csv  spei_44.csv  spei_45.csv  (+8 more)
index_data/spi/: spi_1.csv  spi_10.csv  spi_11.csv  spi_12.csv  spi_13.csv  spi_14.csv  spi_15.csv  spi_16.csv  spi_17.csv  spi_18.csv  spi_19.csv  spi_2.csv  spi_20.csv  spi_21.csv  spi_22.csv  spi_23.csv  spi_24.csv  spi_25.csv  spi_26.csv  spi_27.csv  spi_28.csv  spi_29.csv  spi_3.csv  spi_30.csv  spi_31.csv  spi_32.csv  spi_33.csv  spi_34.csv  spi_35.csv  spi_36.csv  spi_37.csv  spi_38.csv  spi_39.csv  spi_4.csv  spi_40.csv  spi_41.csv  spi_42.csv  spi_43.csv  spi_44.csv  spi_45.csv  (+8 more)
src/buckley24drought/: __init__.py  sgi.py  spei.py  spi.py  util.py
src/buckley24drought/data/: README.md
src/buckley24drought/data/gridmet/: README.md  balance_eto_gridmet_1981_2020.csv  precip_gridmet_1981_2020.csv
src/buckley24drought/data/gw/: Bitterroot_gw_well_meta.csv  Gallatin_gw_well_meta.csv  Paradise_gw_well_meta.csv  README.md  aquifer_codes.csv
src/buckley24drought/data/gw/swl/: 101007.csv  102486.csv  103499.csv  103500.csv  103575.csv  103644.csv  104586.csv  105959.csv  105980.csv  106030.csv  106074.csv  123132.csv  126354.csv  126793.csv  129491.csv  129952.csv  130860.csv  132260.csv  133162.csv  133165.csv  133167.csv  133172.csv  133174.csv  133176.csv  133571.csv  135081.csv  135680.csv  135689.csv  135720.csv  135722.csv  135734.csv  135735.csv  136050.csv  136486.csv  136964.csv  136969.csv  136970.csv  138764.csv  139851.csv  139989.csv  (+111 more)
tests/: conftest.py  test_sgi.py  test_spei.py  test_spi.py  test_util.py
