[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buckley24drought"
version = "2024.1"
authors = [
    { name = "Daniel N. Buckley", email = "buckley.daniel.n@gmail.com" },
]
keywords = ["drought"]
description = "Data and code for Montana Tech M.S. thesis (Spring 24)"
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/dannbuckley/buckley24drought"