[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buckley24drought"
version = "2024.1"
dependencies = [
    "numpy >= 1.24.4",
    "pandas >= 2.1.4",
    "scikit-learn >= 1.3.2",
    "scipy >= 1.11.4",
]
authors = [
    { name = "Daniel N. Buckley", email = "buckley.daniel.n@gmail.com" },
]
keywords = ["drought"]
description = "Data and code for Montana Tech M.S. thesis (Spring 24)"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/dannbuckley/buckley24drought"

[project.optional-dependencies]
dev = [
    "pylint >= 2.17.7",
]
testing = [
    "pylint >= 7.4.4",
    "pytest-cov",
]