[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buckley24drought"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas >= 2",
    "scikit-learn",
    "scipy",
]
authors = [
    { name = "Daniel N. Buckley", email = "buckley.daniel.n@gmail.com" },
]
keywords = ["drought"]
description = "Data and code for 'Investigating the drought sensitivity of intermontane-basin groundwater systems in western Montana using standardized drought indices' (Buckley, 2024)"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/dannbuckley/buckley24drought"

[project.optional-dependencies]
testing = [
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.dynamic]
version = {attr = "buckley24drought.__version__"}

[tool.setuptools.dynamic.optional-dependencies.tests]
file = [ "reqs/test.txt", ]
